--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "inertia-wordpress",
+	"name": "@evo-mark/inertia-wordpress",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -15,7 +15,7 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"packageManager": "pnpm@10.4.0+sha512.6b849d0787d97f8f4e1f03a9b8ff8f038e79e153d6f11ae539ae7c435ff9e796df6a862c991502695c7f9e8fac8aeafc1ac5a8dab47e36148d183832d886dd52",
+	"packageManager": "pnpm@10.11.0",
 	"devDependencies": {
 		"@eslint/js": "^9.26.0",
 		"eslint": "^9.26.0",
@@ -31,5 +31,14 @@
 	},
 	"dependencies": {
 		"@mdi/js": "^7.4.47"
+	},
+	"pnpm": {
+		"overrides": {
+			"axios": ">=1.9.0",
+			"@babel/runtime": ">=7.26.10"
+		},
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
 	}
 }
